<resources>

    <string name="app_name">نِمای من</string>
    <string name="navigation_drawer_open">باز کردن</string>
    <string name="navigation_drawer_close">بستن</string>

    <!-- nav -->
    <string name="nav_header_title">نِمای من</string>
    <string name="nav_header_subtitle">info@nemayman.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navFilter">فیلتر</string>
    <string name="navSearch">جستجو</string>
    <string name="navOurWebsite">سایت مون رو ببینید</string>
    <string name="navResume">نمونه کار</string>
    <string name="navTech">آموزش</string>
    <string name="navSEO">بهینه سازی سایت</string>
    <string name="navShare">به اشتراک بگذارید</string>
    <string name="navAskQ">سوالتان را از ما برپسید</string>
    <string name="navAboutUs">درباره ی نمای من</string>
    <string name="navContactUs">تماس با ما</string>

    <string name="txtTitle">عنوان</string>
    <string name="txtDec">متن</string>
    <string name="txtCategory">کتگوری</string>
    <string name="btnComment">کامنت</string>
    <string name="user">کاربر</string>

    <string name="txtDateFrom">از تاریخ:</string>
    <string name="txtDateTo">تا تاریخ:</string>
    <string name="txtDoFilter">اعمال</string>
    <string name="txtDeleteFilter">حذف فیلتر</string>
    <string name="txtDismiss">بستن</string>
    <string name="txtFilter">فیلتر کردن</string>
    <string name="txtCategories">دسته بندی ها:</string>
    <string name="txtDate">تاریخ</string>
    <string name="txtTryAgain">تلاش مجدد</string>

    <string name="AlertCantConnect">خطا در ارتباط</string>
    <string name="AlertCheckNetAgain">لطفا ارتباط خود با اینترنت را چک نمایید</string>

    <!-- URL -->
    <string name="urlDetailsComments">http://nemayman.com/wp-json/wp/v2/comments?post=</string>
    <string name="urlMainPosts">http://nemayman.com/wp-json/wp/v2/posts?_embed</string>
    <string name="urlMainFilter">http://nemayman.com/wp-json/wp/v2/posts?_embed</string>
    <string name="urlMainCategories">http://nemayman.com/wp-json/wp/v2/categories?per_page=100</string>
    <string name="urlSearch">http://nemayman.com/wp-json/wp/v2/posts?_embed</string>

    <!-- txt Navigation DrawerLayout -->
    <string name="urlNavigationOurWebSite">http://nemayman.com/</string>
    <string name="urlNavigationResume">http://nemayman.com/%d9%86%d9%85%d9%88%d9%86%d9%87-%da%a9%d8%a7%d8%b1%d9%87%d8%a7/</string>
    <string name="urlNavigationSEO">http://nemayman.com/category/learning/support/</string>
    <string name="urlNavigationAboutUs">http://nemayman.com/%d8%af%d8%b1%d8%a8%d8%a7%d8%b1%d9%87-%d9%86%d9%85%d8%a7%db%8c-%d9%85%d9%86/</string>
    <string name="supportEmail">support@nemayman.com</string>
    <string name="subjectEmail">درخواست پشتیبانی</string>
    <string name="titleEmail">Send Email To Nemayman.com</string>
    <string name="shareSubject">طراحی وبسایت</string>
    <string name="shareTitle">انتخاب کنید</string>

    <!-- Toast -->
    <string name="toastDetailsNoComment">کامنتی وجود ندارد</string>
    <string name="toastMainNoMorePosts">پست بیشتری وجود نداره</string>
    <string name="toastMainWrongDate">بازه انتخابی اشتباه است</string>
    <string name="toastMainChooseToFilter">لطفا یکی از موارد را انتخاب کنید</string>
    <string name="toastSplashCantConnect">خطا در برقرار ارتباط</string>
    <string name="toastSearchFirstSearch">مورد یافت شد</string>
    <string name="toastSearchOtherSearches">مورد دیگه یافت شد</string>
    <string name="toastSearchNothingFound">موردی یافت نشد</string>

</resources>
