<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/cardView"
    android:layoutDirection="ltr"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="right|center"
            android:layout_marginRight="7dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/txtTitle"
                android:textColor="#000000"
                android:textDirection="anyRtl"
                android:textSize="20dp"
                android:textStyle="bold" />

            <io.github.meness.Library.HtmlTextView.HtmlTextView
                android:id="@+id/txtExcerpt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/txtDec"
                android:maxLines="3"
                android:textDirection="anyRtl" />

            <TextView
                android:id="@+id/txtCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCategory"
                android:textSize="10dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgThumb"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="7" />

    </LinearLayout>

</android.support.v7.widget.CardView>