<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    tools:context=".Activity_Details_Nema">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitleDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtTitle"
                android:textDirection="anyRtl"
                android:textSize="@dimen/mdtp_year_label_text_size" />

            <ImageView
                android:id="@+id/imgTitleDetails"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <io.github.meness.Library.HtmlTextView.HtmlTextView
                android:id="@+id/txtDecDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtDec"
                android:textDirection="anyRtl" />


            <in.shadowfax.proswipebutton.ProSwipeButton
                android:id="@+id/btnCommentDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:bg_color="@android:color/holo_blue_dark"
                app:btn_text="@string/btnComment" />


            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:id="@+id/progressLoadingComment"
                style="@style/Widget.MaterialProgressBar.ProgressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_weight="0.1"
                android:indeterminate="true"
                android:visibility="gone"
                app:mpb_indeterminateTint="@color/ProgressBarLoadingColor" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerComment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>